Atualização exercicio MArvel

--- a/output/report.html
+++ b/output/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,19,4],[],[[5,0,0,[],[0,19,0,6],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,31,4],[],[[5,0,0,[],[0,16,0,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Marvel","*C:\\Users\\cecilia.ferreira\\Documents\\escola tec\\Teste_integrado\\Marvel.robot","*../Marvel.robot","*Suite setup failed:\nNo keyword with name 'Criar Configuracao Inicial do Teste' found.","*Testar API Char da Marvel","*Parent suite setup failed:\nNo keyword with name 'Criar Configuracao Inicial do Teste' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Marvel","*C:\\Users\\cecilia.ferreira\\Documents\\escola tec\\Teste_integrado\\Marvel.robot","*../Marvel.robot","*Suite setup failed:\nNo keyword with name 'Configurar Sessao requisicao_marvel' found.","*Testar API Char da Marvel","*Parent suite setup failed:\nNo keyword with name 'Configurar Sessao requisicao_marvel' found."]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":1,"id":"s1","label":"Marvel","name":"Marvel","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1660754171371;
+window.output["baseMillis"] = 1660755060533;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 39;
+window.output["generated"] = 31;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
